# gemini_context_monitor

./: .gitignore  README.md  app.py  gemini_context.py  pyproject.toml
core/: calculator.py  db.py  display.py  model_summary.py  models_registry.py  monitor_service.py  session_reader.py
tests/: test_core.py
ui/: main_window.py  theme.py
