[project]
name = "gemini-context-monitor"
version = "0.1.0"
description = "Gemini CLI Context Monitor"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rich>=13.0.0",
    "pydantic>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

[project.scripts]
gemini-context = "gemini_context:main"
